--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "assemblyai": "^3.0.1",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-speech": "^1.0.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
